# rFetch

./: .SRCINFO  .gitignore  ArchLinux.yaml  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  config.example.toml  install.sh  test_features.sh  test_termux.sh  test_termux_logo.sh
.vercel/: project.json
release-files/: README-RELEASE.md  rfetch-macos-linux
src/: config.rs  display.rs  error.rs  info.rs  logo.rs  main.rs  tdl.rs  themes.rs  utils.rs
theme-creator/: README.md  index.html  style.css  theme-creator.js
theme-creator/examples/: cyberpunk.yaml  matrix.json  synthwave.toml
