[package]
name = "rfetch"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A fast and beautiful system information tool written in Rust"
license = "MIT"
repository = "https://github.com/yourusername/rfetch"
keywords = ["system", "info", "fetch", "cli", "cross-platform"]
categories = ["command-line-utilities"]

[[bin]]
name = "rfetch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
colored = "2.0"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
atty = "0.2"
num_cpus = "1.16"
unicode-width = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = "0.27"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "sysinfoapi", "processthreadsapi", "memoryapi"] }
wmi = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
system-configuration = "0.5"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true